--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,7 @@
     </section>
 </section>
 <!-- to do: 
-    - poprawienie pdfów
+    - poprawienie pdfów (zmiana komponentów na treść zaciąganą z tłumaczeń + dodanie logiki które tłumaczenie trzeba zaciągnąć)
+    - dodanie tłumaczeń
     - stylowanie mobilne (zrobione w połowie)
 -->
