--- a/src/app/components/stepByStepFolder/text-step-by-step/text-step-by-step.component.html
+++ b/src/app/components/stepByStepFolder/text-step-by-step/text-step-by-step.component.html
@@ -1,7 +1,7 @@
 <section #stepByStepElement>
     <div *ngIf="combiantion.fromEncoding == TypeOfCoding.text || combiantion.toEncoding == TypeOfCoding.text; else other" class="mx-5">
-        <p>wiadomość przed zakodowaniem to: {{codingService.message}}</p>
-        <p>Szukamy w znaków z wiadomości w tabeli (podświetli się na niebiesko)</p>
+        <p>{{"stepByStepSection.beforeCoding" | translate}} {{codingService.message}}</p>
+        <p>{{"stepByStepSection.singleLabel" | translate}}</p>
         <div *ngIf="combiantion.fromEncoding == TypeOfCoding.ascii  || combiantion.toEncoding == TypeOfCoding.ascii" >
             <ng-container *ngTemplateOutlet="tableASCII"></ng-container>
         </div>
@@ -11,12 +11,12 @@
         <div *ngIf="combiantion.toEncoding == TypeOfCoding.iso8859 || combiantion.fromEncoding == TypeOfCoding.iso8859 " >
          <ng-container *ngTemplateOutlet="tableISO"></ng-container>
         </div>
-        <p>Wiadomość po zakodowaniu: {{codingService.convert(codingService.message,codingService.combinationCoding)}}</p>
+        <p>{{"stepByStepSection.afterCoding" | translate}} {{codingService.convert(codingService.message,codingService.combinationCoding)}}</p>
     </div>
 </section>
 <ng-template #other>
-    <p>wiadomość przed zakodowaniem to: {{codingService.message}}</p>
-    <p>Szukamy w znaków z wiadomości w tabeli (znaki do zakodowania podświetlą się na niebiesko a zakodowana na zielono)</p>
+    <p>{{"stepByStepSection.beforeCoding" | translate}} {{codingService.message}}</p>
+    <p>{{"stepByStepSection.moreThanSingleLabel" | translate}}</p>
     <div *ngIf="combiantion.fromEncoding == TypeOfCoding.ascii  || combiantion.toEncoding == TypeOfCoding.ascii" >
         <ng-container *ngTemplateOutlet="tableASCII; context: {firstTable: combiantion.fromEncoding == TypeOfCoding.ascii}"></ng-container>
     </div>
@@ -26,15 +26,15 @@
     <div *ngIf=" combiantion.toEncoding == TypeOfCoding.utf8 || combiantion.fromEncoding == TypeOfCoding.utf8" >
        <ng-container *ngTemplateOutlet="tableUtf8; context:{firstTable: combiantion.fromEncoding == TypeOfCoding.utf8}"></ng-container>
     </div>
-    <p>Wiadomość po zakodowaniu: {{codingService.convert(codingService.message,codingService.combinationCoding)}}</p>
+    <p>{{"stepByStepSection.afterCoding" | translate}} {{codingService.convert(codingService.message,codingService.combinationCoding)}}</p>
 </ng-template>
 <ng-template #tableUtf8 let-firstTable="firstTable">
-    <p class="text-center">Tabela UTF-8</p>
+    <p class="text-center">{{"learningSection.tableLabels.tableUtf8" | translate}}</p>
     <div class="my-5" style="overflow-x: auto;">
         <table class="d-flex" style="max-height: 300px;">
           <tr>
-            <td style="min-width: 50px;">Kod</td>
-            <td style="min-width: 50px;">Znak</td>
+            <td style="min-width: 50px;">{{"learningSection.tableLabels.code" | translate}}</td>
+        <td style="min-width: 50px;">{{"learningSection.tableLabels.char" | translate}}</td>
           </tr>
           <tr  *ngFor="let char of utf8Table; let i = index" style="min-width: 60px;"  [ngClass]="{ 'finded-encode-value': findEncodeCharacter(i), 'finded-coded-value': findCodedCharacter(i) && !(this.combiantion.fromEncoding ==TypeOfCoding.text  || this.combiantion.toEncoding ==TypeOfCoding.text) && !firstTable}">
             <td>{{char.codePoint}}: </td>
@@ -44,12 +44,12 @@
       </div>
   </ng-template>
   <ng-template #tableISO let-firstTable="firstTable">
-    <p class="text-center">Tabela ISO-8859</p>
+    <p class="text-center">{{"learningSection.tableLabels.tableIso" | translate}}</p>
     <div class="my-5" style="overflow-x: auto;">
       <table class="d-flex" style="max-height: 300px;">
         <tr>
-          <td style="min-width: 50px;">Kod</td>
-          <td style="min-width: 50px;">Znak</td>
+          <td style="min-width: 50px;">{{"learningSection.tableLabels.code" | translate}}</td>
+        <td style="min-width: 50px;">{{"learningSection.tableLabels.char" | translate}}</td>
         </tr>
         <tr *ngFor="let char of isoCodes; let i = index" style="min-width: 60px;"  [ngClass]="{ 'finded-encode-value': findEncodeCharacter(i), 'finded-coded-value': findCodedCharacter(i) && !(this.combiantion.fromEncoding ==TypeOfCoding.text  || this.combiantion.toEncoding ==TypeOfCoding.text)  && !firstTable }">
             <td>{{char.codePoint}}: </td>
@@ -59,12 +59,12 @@
       </div>
   </ng-template>
   <ng-template #tableASCII let-firstTable="firstTable">
-    <p class="text-center">Tabela ASCII</p>
+    <p class="text-center">{{"learningSection.tableLabels.tableAscii" | translate}}</p>
     <div class="my-5" style="overflow-x: auto;">
       <table class="d-flex" style="max-height: 300px;">
         <tr>
-          <td style="min-width: 50px;">Kod</td>
-          <td style="min-width: 50px;">Znak</td>
+          <td style="min-width: 50px;">{{"learningSection.tableLabels.code" | translate}}</td>
+          <td style="min-width: 50px;">{{"learningSection.tableLabels.char" | translate}}</td>
         </tr>
         <tr  *ngFor="let char of asciiTable; let i = index" style="min-width: 60px;" 
         [ngClass]="{ 'finded-encode-value': findEncodeCharacter(i) , 'finded-coded-value': findCodedCharacter(i) && !(this.combiantion.fromEncoding ==TypeOfCoding.text  || this.combiantion.toEncoding ==TypeOfCoding.text)  && !firstTable}">
