--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,5 @@
     </section>
 </section>
 <!-- to do: 
-    - poprawienie pdfów (zmiana komponentów na treść zaciąganą z tłumaczeń + dodanie logiki które tłumaczenie trzeba zaciągnąć)
-    - dodanie tłumaczeń
-    - stylowanie mobilne (zrobione w połowie)
+    - poprawienie pdfów (dodanie logiki które tłumaczenie trzeba zaciągnąć)
 -->
