--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,3 +5,9 @@
   background: linear-gradient(180deg, rgba(255, 255, 255, 1) 0%, rgba(59, 130, 246, 1) 50%);
   text-align: center;
 }
+main {
+  height: 95vh;
+}
+footer {
+  font-size: 13px;
+}
