--- a/src/app/components/encoding-messages/encoding-messages.component.html
+++ b/src/app/components/encoding-messages/encoding-messages.component.html
@@ -18,7 +18,7 @@
         [placeholder]="'encodingMessagesSection.encodeTextareaPlaceholder' | translate | titlecase"></textarea>
     </div>
     
-    <p-button (onClick)="switchMessages()" [disabled]="!submit && !form.get('codedMessage')?.valid && !(!!form.get('selectedEncode')?.value && !!form.get('selectedCoded')?.value)" class="change-button mt-5" icon="pi pi-arrow-right-arrow-left" size="large" ></p-button>
+    <p-button (onClick)="switchMessages()" [disabled]="!submit && validationBeforeSubmit()" class="change-button mt-5" icon="pi pi-arrow-right-arrow-left" size="large" ></p-button>
     <div class="d-flex flex-column ms-4">
       <p-dropdown 
         [class]="form.get('selectedCoded')?.invalid  && submit? 'ng-dirty ng-invalid my-3' : 'my-3'"
